--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,16 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    mavenCentral()
+    maven {
+        credentials {
+            username nexusUsername
+            password nexusPassword
+        }
+        url "https://nexus.eimware.it/repository/maven-releases/"
+    }
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -24,6 +35,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'it.smartspace.jz:communication:3.11.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -38,5 +50,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.github.kai-morich:usb-serial-for-android:1.7.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation('org.jscience:jscience:4.3.1') {
+        exclude group: "org.javolution"
+    }
 
 }
